Fix background on mobile photo page with dark theme

--- a/app/assets/stylesheets/mobile/mobile.scss
+++ b/app/assets/stylesheets/mobile/mobile.scss
@@ -281,7 +281,7 @@ footer {
 
   .photo {
     text-align: center;
-    background-color: #FFFFFF;
+    background-color: $framed-background;
     border-style: solid;
     border-width: 1px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
